[package]
edition = "2021"
name = "spotto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"]}
dotenv = "0.15.0"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
tokio = {version = "1", features = ["macros", "rt", "rt-multi-thread"]}
